--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,15 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    
+    <% flash.each do |message_type, message| %>
+      
+       <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
     <div class="container">
       <%= yield %>
    
     <%= render "layouts/footer" %>
+       <%= debug(params) if Rails.env.development? %>
      </div>
   </body>
 </html>
